tests/gabc-dump/should-fail/bad-special-sign.gabc
name: bad special sign;
%%
(c3) g(g:r3)
